--- a/vignettes/mcmcse_vignette.Rnw
+++ b/vignettes/mcmcse_vignette.Rnw
@@ -53,28 +53,40 @@ The package is predominantly useful after MCMC output has been obtained by the u
 \bigskip
 \section{An MCMC Example}
 
-To illustrate the use of our package, we present the following simple multivariate AR(1) process. The process is defined for $t = 1, 2, 3, \dots$ as,
-\[y_t = w + A y_{t-1} + \epsilon_t, \]
+To illustrate the use of our package, we consider sampling from a bivariate normal distribution using a Gibbs sampler. For $\omega_1, \omega_2 > 0$ and  $\rho$ such that $\rho^2 < \omega_1 \omega_2$, the target distribution is 
 
-where $w$ is a constant vector in $\mathbb{R}^p$, $y_t \in \mathbb{R}^p$, $A$ is a $p \times p$ matrix and $\epsilon_t \sim N_p(0, C)$. In our example, we let $A$ and $C$ be diagonal matrices. The invariant distrbution for this process is $F = N_p(0, V)$ where $V$ is a function of $A$ and $C$. 
+\[
+\left(\begin{array}{c}
+  X_1 \\ X_2
+\end{array} \right) \sim 
+ N \begin{pmatrix}
+\begin{pmatrix}
+\mu_{1}\\
+\mu_{2}
+\end{pmatrix}, 
+\begin{pmatrix}
+\omega_1 & \rho \\
+\rho & \omega_2
+\end{pmatrix}
+\end{pmatrix}
+\]
 
-The function \texttt{mAr.sim} in package \texttt{mAr} draws samples from the above model. We let $p = 3$.
+
+The function $BVN_Gibbs$ in the package draws samples from the above model. 
 
 <<var>>=
-library(mAr)
-p <- 3
-A <- diag(c(.1, .5, .8))
-C <- diag(rep(2, 3))
+mu = c(2, 50)
+sigma = matrix(c(1, 0.5, 0.5, 1), nrow = 2)
 
 # Monte Carlo sample size is N
-N <- 1e5
+N <- 1e4
 set.seed(100)
-chain <- mAr.sim(w = rep(2,p), A = A, C = C, N = N)
+chain <- BVN_Gibbs(N, mu, sigma)
 @
 
-For using the \texttt{mcmcse} package the rows of the MCMC output should store each iteration of the algorithm and so the output should have $n$ rows and $p$ columns. We will denote each row $i$ of the output as $y_i = (y^{(1)}_i, y^{(2)}_i, y^{(3)}_i)$.
+For using the \texttt{mcmcse} package the rows of the MCMC output should store each iteration of the algorithm and so the output should have $n$ rows and $p$ columns. We will denote each row $i$ of the output as $y_i = (y^{(1)}_i, y^{(2)}_i)$.
 <<foo, echo = FALSE >>=
-colnames(chain) <- c("Y1", "Y2", "Y3")
+  colnames(chain) <- c("Y1", "Y2")
 @
 <<output>>=
 #Rows has observations (samples) and each comlumn is a component. 
@@ -84,21 +96,21 @@ head(chain)
 \bigskip
 This vignette will discuss estimating two sets of features of interest of $F$.
 \begin{itemize}
-	\item $\text{E}_F y$: For estimating $\mu = \text{E}_Fy$, the estimator is the Monte Carlo sample mean
+\item $\text{E}_F y$: For estimating $\mu = \text{E}_Fy$, the estimator is the Monte Carlo sample mean
 \[ \mu_n = \dfrac{1}{n} \displaystyle \sum_{t=1}^{n} y_t.\]
 
 In \texttt{R}, $\mu_n$ is obtained using the usual \texttt{colMeans} function. If $p = 1$, then use \texttt{mean} instead of \texttt{colMeans}.
 
 <<means>>=
- colMeans(chain)
+colMeans(chain)
 @
-
-	\item $\text{E}_F \left(y^{(1)2} + y^{(2)2} + y^{(3)2} \right)$: When interested in estimating the sum of the second moments of each component of $y$,  define the function $g: \mathbb{R}^3 \to \mathbb{R}$ as $g((x_1,x_2,x_3)) = x_1^2 + x_2^2 + x_3^2$. This is defined in \texttt{R} by creating a function that implements the function $g$, row-wise.
+  
+\item $\text{E}_F \left(y^{(1)2} + y^{(2)2} \right)$: When interested in estimating the sum of the second moments of each component of $y$,  define the function $g: \mathbb{R}^2 \to \mathbb{R}$ as $g((x_1,x_2)) = x_1^2 + x_2^2$. This is defined in \texttt{R} by creating a function that implements the function $g$, row-wise.
 
 <<g>>=
 g <- function(x)
 {
-	return(sum(x^2))
+  return(sum(x^2))
 }
 @
 
@@ -138,26 +150,30 @@ In this package, the functions \texttt{mcse}, \texttt{mcse.mat}, \texttt{mcse.mu
 \item \texttt{mcse.initseq}: asymptotically conservative estimates of $\Sigma$ using initial sequence estimators.
 \end{itemize}
 
-Using the \texttt{mcmcse} package we can estimate $\Sigma$ in \eqref{eq:clt} with the \texttt{mcse.multi} and \texttt{mcse.initseq} function. 
+Using the \texttt{mcmcse} package we can estimate $\Sigma$ in \eqref{eq:clt} with the \texttt{mcse.multi} and \texttt{mcse.initseq} function.
 
 <<mcse>>=
-library(mcmcse)
+#library(mcmcse)
 
 # Batch means estimator
 mcerror_bm <- mcse.multi(x = chain, method =  "bm", r = 1,
-	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+                         size = NULL, g = NULL, adjust = TRUE, 
+                         blather = TRUE)
 
 # Overlapping batch means estimator
 mcerror_bm <- mcse.multi(x = chain, method =  "obm", r = 1,
-	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+                         size = NULL, g = NULL, adjust = TRUE, 
+                         blather = TRUE)
 
 # Spectral variance estimator with Bartlett window
 mcerror_bart <- mcse.multi(x = chain, method =  "bartlett", r = 1,
-	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+                           size = NULL, g = NULL, adjust = TRUE, 
+                           blather = TRUE)
 
 # Spectral variance estimator with Tukey window
 mcerror_tuk <- mcse.multi(x = chain, method =  "tukey", r = 1,
-	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+                          size = NULL, g = NULL, adjust = TRUE, 
+                          blather = TRUE)
 
 # Initial sequence estimator, unadjusted
 mcerror_is <- mcse.initseq(x = chain, g = NULL, 
@@ -169,48 +185,36 @@ mcerror_isadj <- mcse.initseq(x = chain, g = NULL,
 @
 
 \begin{itemize}
-	\item \texttt{x} takes the $n \times p$ MCMC data. \texttt{x} can take only numeric entries in the form of a matrix or data frame. The rows of \texttt{x} are the iterations of the MCMC.
+\item \texttt{x} takes the $n \times p$ MCMC data. \texttt{x} can take only numeric entries in the form of a matrix or data frame. The rows of \texttt{x} are the iterations of the MCMC.
 
-	\item \texttt{method = bm, obm, bartlett, tukey} calculates the estimate using the batch means method and spectral variance methods with the modified-Bartlett and Tukey-Hanning windows.
-	
-	\item \texttt{r} is the lugsail parameter that indicates how much to "lift" the lag window (this also  applies to \texttt{bm} and \texttt{obm}). Higher values will increasingly remove underestimation of $\Sigma$ but may yield more variable estimators. Values more than 5 are not advised and negative values are not allowed. Reasonable choices are $r = 1, 2, 3$, where $r = 3$ yields the lugsail estimator, $r = 2$ is the flat-top estimator, and $r = 1$ is the vanilla estimator. 
+\item \texttt{method = bm, obm, bartlett, tukey} calculates the estimate using the batch means method and spectral variance methods with the modified-Bartlett and Tukey-Hanning windows.
 
-	\item \texttt{size} is the batch size for the \texttt{bm} method and the truncation point for \texttt{tukey} and \texttt{bartlett} methods. Default batch size is calulcated using the exported \texttt{batchSize} function. Other accepted values are \texttt{size = sqroot}, which sets the size as $\lfloor \sqrt{n} \rfloor$ and \texttt{size = cuberoot} which sets it at $\lfloor n^{1/3} \rfloor$. An integer value of \texttt{size} less than $n$ is also valid as long as $n/\texttt{size} > 1$.
-	
+\item \texttt{r} is the lugsail parameter that indicates how much to "lift" the lag window (this also  applies to \texttt{bm} and \texttt{obm}). Higher values will increasingly remove underestimation of $\Sigma$ but may yield more variable estimators. Values more than 5 are not advised and negative values are not allowed. Reasonable choices are $r = 1, 2, 3$, where $r = 3$ yields the lugsail estimator, $r = 2$ is the flat-top estimator, and $r = 1$ is the vanilla estimator. 
+
+\item \texttt{size} is the batch size for the \texttt{bm} method and the truncation point for \texttt{tukey} and \texttt{bartlett} methods. Default batch size is calulcated using the exported \texttt{batchSize} function. Other accepted values are \texttt{size = sqroot}, which sets the size as $\lfloor \sqrt{n} \rfloor$ and \texttt{size = cuberoot} which sets it at $\lfloor n^{1/3} \rfloor$. An integer value of \texttt{size} less than $n$ is also valid as long as $n/\texttt{size} > 1$.
+
 For reference on \texttt{bm} (batch means estimators) see \cite{jones2006fixed} and \cite{vats:fleg:jones:2017b}.
 
 For reference on \texttt{bartlett} and \texttt{tukey} (spectral variance estimators)see \cite{flegal2010batch} and \cite{vats2015strong}.
 
 For reference on lugsail estimation see \cite{liu:fleg:2018} and \cite{vats:fleg:2018}.
 
-	\item \texttt{g} is a function that is applied to each row of \texttt{x} and represents the features of interest of the process. Since here we are interested in only means, \texttt{g} is \texttt{NULL}. \texttt{g} will be explained in later examples.
-	
-	\item \texttt{adjust} is a logical argument indicating whether the resulting matrix should be adjusted in order to retain positive-definiteness. By default this is set to be \texttt{TRUE}.
-	
-	\item \texttt{blather} when TRUE outputs under the hood information about the estimation process. The default is set to \texttt{FALSE} since most users should be interested in only \texttt{cov} and \texttt{est}.
-	
+\item \texttt{g} is a function that is applied to each row of \texttt{x} and represents the features of interest of the process. Since here we are interested in only means, \texttt{g} is \texttt{NULL}. \texttt{g} will be explained in later examples.
+
+\item \texttt{adjust} is a logical argument indicating whether the resulting matrix should be adjusted in order to retain positive-definiteness. By default this is set to be \texttt{TRUE}.
+
+\item \texttt{blather} when TRUE outputs under the hood information about the estimation process. The default is set to \texttt{FALSE} since most users should be interested in only \texttt{cov} and \texttt{est}.
+
 For reference on \texttt{mcse.initseq} (initial sequence estimators) see \cite{dai2017multivariate}.
 \end{itemize}
 
-\texttt{mcse.multi} and \texttt{mcse.initseq} return a list with multiple components. When \texttt{blather = FALSE} \texttt{cov} stores the estimate of $\Sigma$ obtained using the method chosen, \texttt{est} stores the estimate of the mean of $g$ applied on the Markov chain. When \texttt{blather = TRUE} the following are returned in addition to the above two: \texttt{nsim}  stores the arguments used to calculate $\Sigma$.  \texttt{size} which indicates the size of batches/truncation, \texttt{method} used. \texttt{mcse.initseq} also returns \texttt{cov.adj}, and whether an adjusted estimator was used (\texttt{adjust}).
 
-<<outputvalue>>=
-mcerror_bm$cov
-
-mcerror_bart$cov
-
-mcerror_tuk$cov
-
-mcerror_is$cov
-
-mcerror_isadj$cov.adj
-
-rbind(mcerror_bm$est, mcerror_bart$est, mcerror_tuk$est,
-      mcerror_is$est, mcerror_isadj$est)
-@
+\texttt{mcse.multi} and \texttt{mcse.initseq} return an S3 class with multiple components. When \texttt{blather = FALSE} \texttt{cov} stores the estimate of $\Sigma$ obtained using the method chosen, \texttt{est} stores the estimate of the mean of $g$ applied on the Markov chain. In addition, \texttt{nsim} stores the no of Markov chain samples, \texttt{eigen-values} stores the eigen values of the estimated $\Sigma$ and \texttt{cov.adj} stores the adjusted covariance matrix if \texttt{adjust = TRUE} (see \texttt{mcse.multi} for more details). When \texttt{blather = TRUE} the following are returned in addition to the above: \texttt{size} which indicates the size of batches/truncation, \texttt{method} used, \texttt{Adjustment-used} indicating whether an adjusted estimator was used (\texttt{adjust}) and \texttt{message} containing additional information about the estimation process (like the numerical adjustments possibly made to keep the estimate mathematically consistent).
 
 
-
+  
+\bigskip  
+  
 \textbf{Note: } The Monte Carlo estimates of $\mu$ are not affected by the choice of the method.
 
 \bigskip
@@ -222,12 +226,13 @@ rbind(mcerror_bm$est, mcerror_bart$est, mcerror_tuk$est,
 \bigskip
 If the diagonals of $\Sigma$ are $\sigma_{ii}^2$, the function \texttt{mcse} and \texttt{mcse.mat} returns $\sigma_{ii}/\sqrt{n}$. \texttt{mcse} does it for one component and \texttt{mcse.mat} does it for all diagonals.
 
+
 <<uni>>=
 mcse(x = chain[,1], method = "bm", g = NULL)
 mcse.mat(x = chain, method = "bm", g = NULL)
 @
-
-
+  
+  
 In order to estimate $\mu_{n,g}$ and $\Sigma_g$ as in \eqref{eq:g_clt}, we use the \texttt{R} function \texttt{g} we had defined before. Recall that \texttt{g} should be a function that takes vector inputs.
 
 <<sigma_g>>=
@@ -257,9 +262,9 @@ lines(confRegion(mcerror_bart, which = c(1,2), level = .90), col = "red")
 @
 
 \begin{itemize}
-	\item \texttt{which} should be a vector of size 2 that indicates the two components for which the confidence ellipse is to be constructed.
+\item \texttt{which} should be a vector of size 2 that indicates the two components for which the confidence ellipse is to be constructed.
 
-	\item \texttt{level} is the confidence level of the confidence region. The default is .95
+\item \texttt{level} is the confidence level of the confidence region. The default is .95
 \end{itemize}
 
 \bigskip
@@ -275,23 +280,24 @@ To determine the effect of the confidence level, we draw two regions with differ
 plot(confRegion(mcerror_is, which = c(1,2), level = .95), type = 'l', asp = 1)
 lines(confRegion(mcerror_is, which = c(1,2), level = .90), col = "red")
 @
-
+  
 \section{Effective Sample Size}
 Reporting $p \times p$ covariance matrix estimates is impractical and uninterpretable. The motivation of estimating Monte Carlo standard error is to ensure that said error is small. This is essentially the idea behind estimating effective sample size and ensuring that the estimated effective sample size is larger than a prespecified lower bound.
 
 Before sampling the Markov chain, the user is advised to used the function \texttt{minESS} to ascertain what is the minimum effective sample size needed for stable analysis. See \cite{vats:fleg:jones:2017b} for theoretical details.
+
 <<minESS>>= 
 # For mu
-minESS(p = 3, alpha = .05, eps = .05)
+minESS(p = 2, alpha = .05, eps = .05)
 
 #For mu_g
 minESS(p = 1, alpha = .05, eps = .05)
 @ 
 
 \begin{itemize}
-	\item \texttt{p} is the dimension of the estimation problem.
-	\item \texttt{alpha} is the confidence level
-	\item \texttt{eps} is the tolerance level. Default is .05. Reasonable levels are anywhere from .01 to .05. The smaller the tolerance, the larger the minimum effective samples. \texttt{eps} represents a tolerance level relative to the variability in the target distribution. It is akin to the idea of margin-of-error.
+\item \texttt{p} is the dimension of the estimation problem.
+\item \texttt{alpha} is the confidence level
+\item \texttt{eps} is the tolerance level. Default is .05. Reasonable levels are anywhere from .01 to .05. The smaller the tolerance, the larger the minimum effective samples. \texttt{eps} represents a tolerance level relative to the variability in the target distribution. It is akin to the idea of margin-of-error.
 \end{itemize}
 
 \texttt{minESS} is independent of the Markov chain or process, and is only a function of the  $p$, $\alpha$, and $\epsilon$. The user should find \texttt{minESS} and then sample their process until the required minimum samples are achieved. 
@@ -299,13 +305,13 @@ minESS(p = 1, alpha = .05, eps = .05)
 Alternatively, we often don't have to luxury of obtaining a lot of samples, and reaching a minimum effective sample size os not possible. In such a scneario, it is useful to know the $\epsilon$ tolerance level the number of estimated effective samples correspond to. So if we can only obtain 1000 effective samples,
 <<eps>>=
 # For mu
-minESS(p = 3, alpha = .05, ess = 1000)
+minESS(p = 2, alpha = .05, ess = 1000)
 
 #For mu_g
 minESS(p = 1, alpha = .05, ess = 1000)
 @
 
-Thus, if you obtained a sample with estimates effective sample size equaling 1000 for estimating $\mu_g$ and $\mu_{n,g}$, then the precision level of your estimate is $\epsilon = .143$ and $\epsilon = .124$, respectively.
+Thus, if you obtained a sample with estimates effective sample size equaling 1000 for estimating $\mu_g$ and $\mu_{n,g}$, then the precision level of your estimate is $\epsilon = .137$ and $\epsilon = .124$, respectively.
 \texttt{multiESS} and \texttt{ess} are two functions that calculate the effective sample size of a correlated sample. \texttt{ess} calculations are based on \cite{gong2015practical} and is component-wise, and \texttt{multiESS} utilizes the multivariate nature of the problem.
 
 %<<ess>>=
@@ -329,7 +335,7 @@ Since the effective sample size is less than the minimum effective samples, we s
 
 <<moresamples>>=
 set.seed(100)
-chain <- mAr.sim(w = rep(2,p), A = A, C = C, N = 28000)
+chain <- BVN_Gibbs(28000, mu, sigma)
 
 # larger than 8123
 multiESS(chain)
@@ -342,8 +348,7 @@ multiESS(chain, covmat = mcerror_is$cov)
 @
 So no matter which estimator we choose for the Monte Carlo standard error, 28000 Monte Carlo samples are sufficient to have $\epsilon = .05$ relative tolerance.
 
-\textbf{NOTE:} Ideally, we do not want to get more samples using the last iteration of the previous Markov chain. However, \texttt{mAr.sim} does not allow user specified starting values, so to demonstrate the use of \texttt{minESS} and \texttt{multiESS}, we get a new sample altogether. When making \texttt{R} packages that simulate a Markov chain, it is often very useful to allow user specific starting values for this reason.
-
+\textbf{NOTE:} Ideally, we do not want to get more samples using the last iteration of the previous Markov chain. However, $BVN_Gibbs$ does not allow user specified starting values and starts from stationarity itself, so to demonstrate the use of \texttt{minESS} and \texttt{multiESS}, we get a new sample altogether. 
 
 \section{Graphical Diagnostics}
 
@@ -357,7 +362,8 @@ Additionally, if $p$ is not too small, due to the central limit theorem in \eqre
 
 We generate a new Markov chain with $p = 50$.
 
-<<qqbig>>=
+<<qqbig, warning = FALSE>>=
+library(mAr)
 p <- 50
 A <- diag(seq(.1, .9, length = p))
 C <- diag(rep(2, p))
@@ -368,14 +374,14 @@ chain <- mAr.sim(w = rep(2,p), A = A, C = C, N = 10000)
 
 For this new Markov chain, we find an estimate of $\Sigma$ to use for the \texttt{qqTest} function.
 
-<<qq, out.width = '8cm'>>=
+<<qq, out.width = '8cm', warning = FALSE>>=
 mcerror_bm <- mcse.multi(chain, method = "bm", blather = TRUE)
 mcerror_isadj <- mcse.initseq(chain, adjust = TRUE, blather = TRUE)
 qqTest(mcerror_bm)
 qqTest(mcerror_isadj)
 @
 
-Thus, we see here that the chain has not quite reached asymptopia.
+Thus, we see here that the chain has reached not reached asymptopia. 
 \bibliographystyle{apalike}
 \bibliography{mcse}
 
